# Tri_offline

./: .gitignore  .gitignore.swp  :wq  BEAMQ.sh  Electron_Count.C  Electron_Count_1.C  Kin_charge_ratio.C  Kin_charge_ratio1.C  MARATHON_NORM.C  PID_eff.C  PID_eff_scan  PID_eff_scan.C  PID_eff_scan_C.d  PID_eff_scan_C_ACLiC_dict.cxx  PID_eff_scan_C_ACLiC_dict_rdict.pcm  PID_eff_scan_C_ACLiC_linkdef.h  Pid_eff.C  Pid_eff_1.C  Pid_eff_2.C  Pid_eff_3.C  Pid_eff_images.C  Pid_eff_macro.C  Runlist  TRI_Main.h  TRI_Tools.h  Total_Charge_kin.C  Total_Charge_runlist.C  Total_Charge_runlist_C.d  Tri_tools_test.C  Yield_kin.C  Yield_runlist.C  batch_pid_scan.cc  check_list.C  corrections.C  get_time.C  get_time1.C  getinfo_new.C  getinfo_new1.C  getinfo_new_C.d  gitupdate.sh  (+17 more)
kin_txt/: #kin_cor_txt.C#  :wq  CMakeLists.txt  Corrections_table.C  Makefile  Rootfiles  cmake_install.cmake  kin_cor_txt.C  kin_cor_txt.C~  kin_cor_txt_C.d  kin_cor_txt_multi.C  kin_cor_txt_multi.C_.bck  kin_cor_txt_multi_C.d  kin_cor_txt_multi_C_ACLiC_dict_rdict.pcm  kin_txt.sh  ps  root_hist  rootlogon.C  run.cc  temp.txt
kin_txt/batch_corrections/: .genjob.swp  genjob  list_jobs
kin_txt/batch_corrections/batch_farm/: 11kin.txt  13kin.txt  15kin.txt  16kin.txt  1kin.txt  2kin.txt  3kin.txt  5kin.txt  7kin.txt  9kin.txt  README  genjob
kin_txt/batch_corrections/batch_files/: batch_  batch_DM_kin9  batch_He3_kin15  (+2 more)
kin_txt/kin1/: D2_kin1.txt  EM_kin1.txt  He3_kin1.txt
kin_txt/kin15/: D2_kin15.txt  He3_kin15.txt
kin_txt/kin16/: D2_kin16.txt  DM2_kin16.txt  DM_kin16.txt  EM_kin16.txt  H1_kin16.txt  H3_kin16.txt  He3_kin16.txt
kin_txt/kin3/: D2_kin3.txt  D2p_kin3.txt  DMp_kin3.txt  EM_kin3.txt  EMp_kin3.txt  H1_kin3.txt  H1p_kin3.txt  H3_kin3.txt  H3p_kin3.txt  He3_kin3.txt  He3p_kin3.txt
kin_txt/kin5/: D22_kin5.txt  D2_kin5.txt  DM_kin5.txt  He3_kin5.txt
kin_txt/kin7/: H3_kin7.txt  He3_kin7.txt
kin_txt/kin9/: DM_kin9.txt
(+154 files in other folders)
